--- a/ajite/ajite/Storyboards/Base.lproj/Main.storyboard
+++ b/ajite/ajite/Storyboards/Base.lproj/Main.storyboard
@@ -2004,13 +2004,13 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eW0-nC-tmr" userLabel="Add Friend">
-                                                <rect key="frame" x="301" y="0.0" width="59" height="32"/>
+                                            <button opaque="NO" contentMode="scaleAspectFit" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eW0-nC-tmr" userLabel="Add Friend">
+                                                <rect key="frame" x="306" y="-2" width="40" height="40"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="32" id="6pJ-IB-Vp8"/>
                                                     <constraint firstAttribute="width" constant="59" id="fGJ-36-96U"/>
                                                 </constraints>
-                                                <state key="normal" image="addpurple"/>
+                                                <state key="normal" image="plus-navy"/>
                                                 <connections>
                                                     <segue destination="xl5-Xm-9WV" kind="presentation" id="Z3n-n1-clk"/>
                                                 </connections>
@@ -2293,6 +2293,7 @@
         <image name="person.fill" catalog="system" width="128" height="120"/>
         <image name="play.rectangle.fill" catalog="system" width="128" height="93"/>
         <image name="plus" catalog="system" width="128" height="113"/>
+        <image name="plus-navy" width="200" height="200"/>
         <image name="plus-purple" width="200" height="200"/>
         <image name="settings-blue" width="30" height="30"/>
         <image name="share-purple" width="100" height="50"/>
