유튜브 플레이어와 플레이리스트 연결을 통한 동영상 재생 기능 구현
유튜브 플레이어와 플레이리스트 연결을 통한 동영상 재생 기능 구현

--- a/ajite/ajite/Storyboards/Base.lproj/Main.storyboard
+++ b/ajite/ajite/Storyboards/Base.lproj/Main.storyboard
@@ -1646,7 +1646,7 @@
                                     </label>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="uvS-OE-UTt" firstAttribute="top" secondItem="2uQ-ld-cEQ" secondAttribute="top" id="Aan-Sm-SBc"/>
+                                    <constraint firstItem="uvS-OE-UTt" firstAttribute="top" secondItem="2uQ-ld-cEQ" secondAttribute="top" identifier="SongListTableViewTop" id="Aan-Sm-SBc"/>
                                     <constraint firstItem="uvS-OE-UTt" firstAttribute="leading" secondItem="2uQ-ld-cEQ" secondAttribute="leading" id="ZjB-gk-P6S"/>
                                     <constraint firstAttribute="trailing" secondItem="uvS-OE-UTt" secondAttribute="trailing" id="zhZ-KJ-Rxr"/>
                                 </constraints>
@@ -2271,7 +2271,7 @@
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="KTm-i4-nT0"/>
-        <segue reference="YzI-Ue-2oM"/>
+        <segue reference="MaB-sY-zyl"/>
         <segue reference="RTc-KO-dhc"/>
         <segue reference="reF-Mh-huZ"/>
     </inferredMetricsTieBreakers>
