--- a/ajite/ajite/Storyboards/Base.lproj/Main.storyboard
+++ b/ajite/ajite/Storyboards/Base.lproj/Main.storyboard
@@ -1724,8 +1724,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="541"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleAspectFit" ambiguous="YES" axis="vertical" alignment="top" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="AUZ-go-cry">
-                                <rect key="frame" x="16" y="37.000000000000028" width="343" height="505.66666666666669"/>
+                            <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" alignment="top" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="AUZ-go-cry">
+                                <rect key="frame" x="16" y="37.000000000000028" width="343" height="505.66666666666674"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Manage Friends" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="erH-il-V8v">
                                         <rect key="frame" x="0.0" y="0.0" width="252.33333333333334" height="40.666666666666664"/>
@@ -1733,7 +1733,7 @@
                                         <color key="textColor" red="0.58596712350000002" green="0.60573637489999999" blue="0.74119347329999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="8G3-Nw-lKR">
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="8G3-Nw-lKR">
                                         <rect key="frame" x="0.0" y="60.666666666666686" width="343" height="445"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <prototypes>
@@ -1744,22 +1744,25 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="343" height="58"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fpd-h9-rac" userLabel="friendProfielPicture">
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fpd-h9-rac" userLabel="friendProfielPicture">
                                                             <rect key="frame" x="15" y="4" width="50" height="50"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="50" id="A06-Gd-EJF"/>
                                                             </constraints>
                                                         </imageView>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5R9-7Z-TgA">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5R9-7Z-TgA">
                                                             <rect key="frame" x="81" y="18.666666666666668" width="41.666666666666657" height="21.000000000000004"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CJW-CC-ssF">
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CJW-CC-ssF">
                                                             <rect key="frame" x="308.33333333333331" y="18" width="19.666666666666686" height="22"/>
                                                             <color key="tintColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <state key="normal" image="minus.circle.fill" catalog="system"/>
+                                                            <connections>
+                                                                <action selector="deleteFriends:" destination="vkF-cX-Loe" eventType="touchUpInside" id="jKt-MS-4G0"/>
+                                                            </connections>
                                                         </button>
                                                     </subviews>
                                                     <constraints>
@@ -1781,6 +1784,10 @@
                                                 </connections>
                                             </tableViewCell>
                                         </prototypes>
+                                        <connections>
+                                            <outlet property="dataSource" destination="doy-ol-alg" id="xp6-MM-ZjK"/>
+                                            <outlet property="delegate" destination="doy-ol-alg" id="BBY-Bi-KmS"/>
+                                        </connections>
                                     </tableView>
                                 </subviews>
                                 <constraints>
@@ -1796,7 +1803,9 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstAttribute="bottomMargin" secondItem="AUZ-go-cry" secondAttribute="bottom" constant="-1.6666666666667425" id="MHW-5B-elb"/>
                             <constraint firstItem="AUZ-go-cry" firstAttribute="leading" secondItem="tBc-Uh-5cH" secondAttribute="leadingMargin" id="Q3Z-NR-8wr"/>
+                            <constraint firstItem="AUZ-go-cry" firstAttribute="top" secondItem="ME9-Ze-8yj" secondAttribute="top" constant="37.000000000000028" id="WBf-8J-cag"/>
                             <constraint firstItem="AUZ-go-cry" firstAttribute="trailing" secondItem="tBc-Uh-5cH" secondAttribute="trailingMargin" id="xKW-gT-xiN"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ME9-Ze-8yj"/>
