--- a/ajite/ajite/Storyboards/Base.lproj/Main.storyboard
+++ b/ajite/ajite/Storyboards/Base.lproj/Main.storyboard
@@ -515,7 +515,7 @@
                                         </constraints>
                                     </stackView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create Ajite" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Liw-YE-B15" userLabel="Logo Ajite">
-                                        <rect key="frame" x="66.666666666666671" y="61.333333333333343" width="216.66666666666663" height="49"/>
+                                        <rect key="frame" x="70.999999999999986" y="63.666666666666657" width="207.66666666666663" height="46.666666666666657"/>
                                         <fontDescription key="fontDescription" name="ProximaNovaA-Bold" family="Proxima Nova Alt" pointSize="40"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <color key="highlightedColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -1115,7 +1115,7 @@
                                                     <inset key="sectionInset" minX="20" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                 </collectionViewFlowLayout>
                                                 <cells>
-                                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" reuseIdentifier="collection" id="aGs-fq-yYE" customClass="SongCollectionViewCell" customModule="ajite" customModuleProvider="target">
+                                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" reuseIdentifier="SongCollectionViewCell" id="aGs-fq-yYE" customClass="SongCollectionViewCell" customModule="ajite" customModuleProvider="target">
                                                         <rect key="frame" x="20" y="9" width="300" height="128"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="uo1-OE-VoH">
@@ -2480,10 +2480,10 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Fv8-EL-tzo"/>
-        <segue reference="KTm-i4-nT0"/>
+        <segue reference="CqG-VZ-R0O"/>
+        <segue reference="xEi-qz-IQe"/>
         <segue reference="MaB-sY-zyl"/>
-        <segue reference="RTc-KO-dhc"/>
+        <segue reference="ZOl-UM-4IR"/>
         <segue reference="sCn-aX-fjh"/>
     </inferredMetricsTieBreakers>
     <resources>
